<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bc_background_gradient_dim" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5sp" >

        <!-- BLURB 1 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/babelio_auth_blurb_part1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- URL -->

        <TextView
            android:id="@+id/babelio_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/babelio_url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_blue" />

        <!-- BLURB 2 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/babelio_auth_blurb_part2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- BUTTON -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_or_email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/username_email"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/babelio_auth_blurb_part2_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/warning" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />

        <!-- BLURB 3 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/babelio_auth_blurb_part3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!-- BUTTON -->

        <TextView
            android:id="@+id/forget_blurb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/babelio_auth_blurb_part4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forget_credentials" />

        <!-- BLURB 3 -->

    </LinearLayout>

</ScrollView>