<?xml version="1.0" encoding="utf-8"?>
<!-- incompatible with APIL4 android:fadeScrollbars="false" -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sync_with_babelio_label"
            style="@style/prefs_item"
            android:drawableLeft="@drawable/ic_menu_refresh"
            android:text="@string/sync_with_babelio" />

        <TextView
            android:id="@+id/import_all_from_babelio_label"
            style="@style/prefs_item"
            android:drawableLeft="@drawable/ic_menu_upload"
            android:text="@string/import_all_from_babelio" />

        <TextView
            android:id="@+id/send_books_to_babelio_label"
            style="@style/prefs_item"
            android:drawableLeft="@drawable/ic_menu_archive"
            android:text="@string/send_books_to_babelio" />
    </LinearLayout>

</ScrollView>